# VaFRIC_data_reader_OpenCV_Eigen

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  package.xml  test_vaFRIC
src/: publisher.cpp  test_vaFRIC.cpp  tester.cpp
src/VaFRIC/: VaFRIC.cpp  VaFRIC.h
